--- a/style.css
+++ b/style.css
@@ -1,16 +1,35 @@
 body {
-    background-image: url("Website Assets/backdrop.png");
-    background-size: cover;
-    background-attachment: fixed;
-    color: white;
+  background-image: url("Website Assets/backdrop.png");
+  background-size: cover;
+  background-attachment: fixed;
+  color: white;
 }
 
-h1{
-    text-align: center;
+h1 {
+  text-align: center;
 }
 
-canvas{
-    display: block;
-    margin-left: auto;
-    margin-right: auto; 
+canvas {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+input {
+  width: 50%;
+  height: 50%;
+  padding: 8px 8px;
+  margin-top: 8px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: 2px solid #bfbfbf;
+}
+
+button {
+  background-color: #f07018;
+  color: white;
+  padding: 8px;
+  text-align: center;
+  border: 2px solid #f07018;
+  border-radius: 4px;
 }
