--- a/style.css
+++ b/style.css
@@ -22,8 +22,14 @@ input {
   margin-top: 8px;
   box-sizing: border-box;
   border-radius: 4px;
+  outline: none;
   border: 2px solid #bfbfbf;
   transition-duration: 0.2s;
+}
+
+input:focus {
+  border: 3px solid #000000;
+  box-shadow: 0 0 8px 0 rgb(0, 0, 0);
 }
 
 button {
@@ -41,4 +47,22 @@ button:hover {
   background-color: #e06818;
   border: 2px solid#e06818;
   transition-duration: 0.2s;
+}
+
+.infocard {
+  width: 20%;
+  background-color: #d6f5f5;
+  margin-top: 30px;
+  padding: 60px;
+  border-radius: 4px;
+  transition-duration: 0.2s;
+}
+
+.infotext {
+  color: black;
+  font-weight: bold;
+}
+
+.infocard:hover {
+  background-color: #c1dfdf;
 }
