--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ button:hover {
 
 .infotext {
   color: black;
-  font-family: "Indie Flower", cursive;
+  font-family: "Fredoka One", cursive;
   font-weight: bold;
 }
 
