--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ input {
   border-radius: 4px;
   outline: none;
   border: 2px solid #bfbfbf;
+  font-family: "Fredoka One", cursive;
   transition-duration: 0.2s;
 }
 
@@ -40,6 +41,7 @@ button {
   text-align: center;
   border: 2px solid #f07018;
   border-radius: 4px;
+  font-family: "Fredoka One", cursive;
   outline: none;
 }
 
